# alivecells

./: .gitignore  LICENSE  README.md  alivecells.py  requirements.txt  save.hexpat  savetool.py  stamps.json
AtlasTool/: AtlasTool.csproj  AtlasTool.sln
AtlasTool/AtlasTool/: AtlasTool.cs  Program.cs  Tile.cs
AtlasTool/Packer/: Bin2D.cs  Bin2DGuillotine.cs  Bin2DMaxRects.cs  Bin2DNodeGuillotine.cs  Bin2DPacker.cs  Extensions.cs  MarginType.cs
AtlasTool/Properties/: AssemblyInfo.cs
PAKTool/: AssemblyInfo.cs  CDBToolSource.cs  Common.cs  DirectoryData.cs  EntryData.cs  FileData.cs  PAKTool.cs  PAKTool.csproj  PAKTool.sln  Program.cs  build_deb.sh  build_osx.sh  build_rpm.sh  build_win.bat  build_win.sh  paktool.spec
docs/: index.md  pak.md
docs/files/: hlboot.md
mobile/: lang.py
savetool/: pyproject.toml  savetool.py
savetool/.opencode/opencode-loop/: ses_1469bac3effey0M27BfgECJ0SB.json
savetool/save_models/PC/: metadata.toml
savetool/save_models/mobile/: metadata.toml
savetool/web/: app.js  index.html  style.css
savetool/web/py/: core.py  js_api.py
savetool/web/py/hxbit/: __init__.py  core.py  debug.py
savetool/web/py/hxbit/shims/: __init__.py  deadcells.py  init.py
stamptool/: index.html
tracks/: batch_generate.py  tracks2blender.py
